# pyDeprecate

./: .codecov.yml  .deepsource.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  PUBLIC-NOTES.md  README.md  RELEASE_0-5.md  _config.yml  index.html  llms.txt  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  setup.cfg  setup.py  versions.json
.github/: AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml  mergify.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: _create-pkg.yml  build-demo-docs.yml  build-docs.yml  ci_check-links.yml  ci_install-pkg.yml  ci_makefile.yml  ci_testing.yml  code-format.yml  codeql.yml  demo-docs.yml  docs-discovery-assets.yml  greetings.yml  publish-pkg.yml  release-pypi.yml  sample-docs.yml
demo-docs/mkdocs/: demo.py  mkdocs.yml  requirements.txt
demo-docs/sphinx/: demo.py  requirements.txt
deprecate/: __init__.py  deprecation.py  utils.py
dev/: 404.html  api-reference.html  changelog.html  changelog.html.md  getting-started.html  index.html  index.html.md  llms-full.txt  llms.txt  mkdocs_hooks.py  objects.inv  sitemap.xml  troubleshooting.html  troubleshooting.html.md
dev/demo-mkdocs/: 404.html  api.html  index.html  objects.inv
dev/demo-sphinx/: api.html  genindex.html  index.html  objects.inv  search.html
dev/guide/: advanced.html  agent-recipes.html  async.html  audit.html  audit.html.md  classes.html  cli.html  cli.html.md  compare-python-deprecation-tools.html  compare-python-deprecation-tools.html.md  customization.html  functions.html  migration.html  properties.html  use-cases.html  use-cases.html.md  void-helper.html  void-helper.html.md
dev/search/: search_index.json
docs/: .gitignore  api-reference.md  changelog.md  demo.py  getting-started.md  index.md  llms-full.txt  llms.txt  mkdocs.yml  mkdocs_hooks.py  requirements.txt  robots.txt  root-sitemap.xml  troubleshooting.md
docs/demo-mkdocs/: index.html  index.md
docs/demo-sphinx/: index.html  index.md
docs/docs/: api.md  demo-mkdocs.md  demo-sphinx.md  demos.md
docs/guide/: advanced.md  agent-recipes.md  api-migration-ci.md  async.md  audit.md  class-object-deprecation.md  classes.md  cli.md  compare-python-deprecation-tools.md  customization.md  deprecate-arguments.md  functions.md  migration.md  modules.md  properties.md  python-deprecation-decorator.md  replace-warnings-warn.md  use-cases.md  void-helper.md
docs/overrides/: main.html  mike_redirect.html
docs/stylesheets/: extra.css
examples/: bad_deprecations.py  demo_deprecated_module.py  good_deprecations.py
latest/: 404.html  changelog.html  getting-started.html  index.html  llms.txt  requirements.txt  sitemap.xml  troubleshooting.html
latest/demo-mkdocs/: 404.html
latest/demo-sphinx/: api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
latest/guide/: audit.html  cli.html  customization.html  migration.html  use-cases.html  void-helper.html
latest/search/: search_index.json
src/deprecate/: __about__.py  __init__.py  __main__.py  _cli.py  _docs.py  _griffe_docstring_ext.py  _griffe_ext.py  _pkg.py  _types.py  audit.py  cli.py  deprecation.py  module.py  proxy.py  structs.py  utils.py
temp_docs/: .gitignore  index.html  requirements.txt
temp_docs/docs/: demos.md  index.md
temp_docs/source/: conf.py  index.rst  sandbox.rst
temp_docs_mkdocs/: _griffe_docstring_ext.py  demo.py  mkdocs.yml
temp_docs_mkdocs/docs/: api.md  index.md
temp_docs_sphinx/: demo.py
temp_docs_sphinx/source/: api.rst  conf.py  index.rst  sandbox.rst
test_docs/: requirements.txt
test_docs/source/: conf.py  index.rst
tests/: TRANSITION-COVERAGE.md  __init__.py  collection_chains.py  collection_degenerate.py  collection_depr_legacy.py  collection_deprecate.py  collection_docstrings.py  collection_misconfigured.py  collection_targets.py  conftest.py  requirements.txt  test_audit.py  test_classes.py  test_cli.py  test_docs.py  test_functions.py  test_utils.py
tests/collection_modules/: __init__.py  new_utils.py  old_math.py  old_utils.py
tests/docs/: .gitignore
tests/integration/: __init__.py  test_audit.py  test_callable_kinds.py  test_classes.py  test_cli.py  test_docs.py  test_functions.py  test_instance.py  test_module_deprecation.py  test_regressions.py  test_setup.py  test_sphinx_ext.py  test_structs.py  test_target_mode.py  test_utils.py
tests/unittests/: __init__.py  test_audit.py  test_call_plan.py  test_cli.py  test_depr_entry.py  test_deprecation.py  test_docs.py  test_property.py  test_proxy.py  test_stacking.py  test_structures.py  test_utils.py
v0.10.0/: 404.html  api-reference.html  changelog.html  changelog.html.md  getting-started.html  index.html  index.html.md  troubleshooting.html  troubleshooting.html.md
v0.10.0/demo-mkdocs/: api.html
v0.10.0/demo-sphinx/: objects.inv  search.html
v0.10.0/guide/: advanced.html  agent-recipes.html  agent-recipes.html.md  async.html  audit.html  classes.html  cli.html  compare-python-deprecation-tools.html  compare-python-deprecation-tools.html.md  customization.html  functions.html  migration.html  migration.html.md  properties.html  properties.html.md  use-cases.html  void-helper.html
v0.10.0/search/: search_index.json
v0.7.0/: 404.html  index.html  requirements.txt  search.html  sitemap.xml
v0.7.0/demo-mkdocs/: index.html
v0.7.0/demo-sphinx/: api.html  genindex.html  index.html  objects.inv  search.html
v0.7.0/search/: search_index.json
v0.8.0/: 404.html  changelog.html  getting-started.html  index.html  llms.txt  mkdocs_hooks.py  sitemap.xml  troubleshooting.html
v0.8.0/demo-mkdocs/: index.html
v0.8.0/demo-sphinx/: api.html  genindex.html  objects.inv
v0.8.0/guide/: audit.html  cli.html  customization.html  (+3 more)
v0.9.0/: 404.html  api-reference.html  changelog.html  changelog.html.md  getting-started.html  getting-started.html.md  index.html  objects.inv  robots.txt  troubleshooting.html
(+24 files in other folders)
