[build-system]
requires = [
  "setuptools",
  "wheel",
]

[tool.ruff]
target-version = "py39"
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
  "docs",
]

lint.select = [
  "D",      # see: https://pypi.org/project/pydocstyle
  "E",
  "F",      # see: https://pypi.org/project/pyflakes
  "I",      # isort
  "N",      # see: https://pypi.org/project/pep8-naming
  "RUF018", # see: https://docs.astral.sh/ruff/rules/assignment-in-assert
  "S",      # see: https://pypi.org/project/flake8-bandit
  "UP",     # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",      # see: https://pypi.org/project/pycodestyle
]
lint.extend-select = [
  "ANN", # see: https://pypi.org/project/flake8-annotations
  "C4",  # see: https://pypi.org/project/flake8-comprehensions
  "PT",  # see: https://pypi.org/project/flake8-pytest-style
  "RET", # see: https://pypi.org/project/flake8-return
  "SIM", # see: https://pypi.org/project/flake8-simplify
  "YTT", # see: https://pypi.org/project/flake8-2020
]
lint.per-file-ignores."setup.py" = [
  "ANN202", # ANN202: flake8-annotations — missing return type annotation for a function (see: https://pypi.org/project/flake8-annotations)
  "ANN401", # ANN401: flake8-annotations — missing type annotation for a variable/attribute (see: https://pypi.org/project/flake8-annotations)
]
lint.per-file-ignores."src/**" = [
  "ANN401", # ANN401: flake8-annotations — missing type annotation for a variable/attribute (see: https://pypi.org/project/flake8-annotations)
]
lint.per-file-ignores."tests/**" = [
  "ANN101", # ANN101: flake8-annotations — missing type annotation for 'self' or first parameter in method/function (see: https://pypi.org/project/flake8-annotations)
  "ANN401", # ANN401: flake8-annotations — missing type annotation for a variable/attribute (see: https://pypi.org/project/flake8-annotations)
  "PT031",  # PT031: flake8-pytest-style — `pytest.warns()` block should contain a single simple statement (see: https://pypi.org/project/flake8-pytest-style)
  "S101",   # S101: flake8-bandit / Bandit — Use of assert detected (raising potential security/logic issues) (see: https://pypi.org/project/flake8-bandit)
]
lint.unfixable = [
  "F401", # F401: pyflakes — module imported but unused (cannot be auto-fixed by Ruff) (see: https://pypi.org/project/pyflakes)
]
# Unlike Flake8, default to a complexity level of 10.
lint.mccabe.max-complexity = 10
# Use Google-style docstrings.
lint.pydocstyle.convention = "google"

[tool.codespell]
#skip = '*.py'
quiet-level = 3
# comma separated list of words; waiting for:
#  https://github.com/codespell-project/codespell/issues/2839#issuecomment-1731601603
# also adding links until they ignored by its: nature
#  https://github.com/codespell-project/codespell/issues/2243#issuecomment-1732019960
#ignore-words-list = ""

[tool.docformatter]
recursive = true
# this need to be shorter as some docstings are r"""...
wrap-summaries = 119
wrap-descriptions = 120
blank = true

[tool.check-manifest]
ignore = [
  "*.yml",
  ".github",
  ".github/*",
]

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".github",
  "dist",
  "build",
  "docs",
]
addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--color=yes",
  "--disable-pytest-warnings",
]
#filterwarnings = ["error::FutureWarning"]
xfail_strict = true
junit_duration_report = "call"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "pass",
]
[tool.coverage.run]
parallel = true
relative_files = true

[tool.mypy]
files = [
  "deprecate",
]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
warn_no_return = "False"
