[build-system]
requires = [
  "setuptools",
  "wheel",
]

[tool.ruff]
target-version = "py39"
line-length = 120
# Exclude a variety of commonly ignored directories.
exclude = [
  "docs",
]
lint.select = [
  "D",  # see: https://pypi.org/project/pydocstyle
  "E",  # see: https://pypi.org/project/pycodestyle
  "F",  # see: https://pypi.org/project/pyflakes
  "I",  # isort
  "N",  # see: https://pypi.org/project/pep8-naming
  "S",  # see: https://pypi.org/project/flake8-bandit
  "UP", # see: https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",  # see: https://pypi.org/project/pycodestyle
]
lint.extend-select = [
  "ANN",    # see: https://pypi.org/project/flake8-annotations
  "C4",     # see: https://pypi.org/project/flake8-comprehensions
  "PT",     # see: https://pypi.org/project/flake8-pytest-style
  "RET",    # see: https://pypi.org/project/flake8-return
  "RUF018", # see: https://docs.astral.sh/ruff/rules/assignment-in-assert
  "RUF100", # see: https://docs.astral.sh/ruff/rules/unused-noqa
  "SIM",    # see: https://pypi.org/project/flake8-simplify
  "YTT",    # see: https://pypi.org/project/flake8-2020
]
lint.per-file-ignores."tests/**" = [
  "S101", # flake8-bandit: Bandit — Use of assert detected (raising potential security/logic issues) (see: https://pypi.org/project/flake8-bandit)
  "S603", # flake8-bandit: Bandit — subprocess call with fixed arguments in tests (see: https://pypi.org/project/flake8-bandit)
]
lint.unfixable = [
  "F401", # F401: pyflakes — module imported but unused (cannot be auto-fixed by Ruff) (see: https://pypi.org/project/pyflakes)
]
# Unlike Flake8, default to a complexity level of 10.
lint.mccabe.max-complexity = 10
# Use Google-style docstrings.
lint.pydocstyle.convention = "google"

[tool.codespell]
# skip = '*.py'
quiet-level = 3
# comma separated list of words; waiting for:
#  https://github.com/codespell-project/codespell/issues/2839#issuecomment-1731601603
# also adding links until they ignored by its: nature
#  https://github.com/codespell-project/codespell/issues/2243#issuecomment-1732019960
# reserved: async generator .asend() protocol — codespell flags it as an "ascend" typo
ignore-words-list = "asend"

[tool.docformatter]
recursive = true
# Match the repository's 120-character line length for docstrings, including raw triple-quoted ones.
wrap-summaries = 120
wrap-descriptions = 120
blank = true

[tool.check-manifest]
ignore = [
  "*.yml",
  ".github",
  ".github/*",
  "Makefile",
]

[tool.mypy]
files = [
  "src/deprecate",
]
python_version = "3.9"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
warn_no_return = "True"
overrides = [ { module = [ "tests.*" ], warn_unused_ignores = false } ]

[tool.pytest]
ini_options.testpaths = [ "src", "tests" ]
ini_options.norecursedirs = [
  ".git",
  ".github",
  "dist",
  "build",
  "docs",
  "demo-*",
]
ini_options.addopts = [
  "--strict-markers",
  "--doctest-modules",
  "--color=yes",
  "--disable-pytest-warnings",
]
# filterwarnings = ["error::FutureWarning"]
# Suppress only the specific legacy-sentinel warnings emitted by `TargetMode.from_legacy()`
# and the construction-time misconfig warnings from `TargetMode.validate()` so that legacy
# test fixtures can be imported at module load without polluting test output.  Patterns are
# scoped by message regex AND originating module (`deprecate._types`) so that warnings of
# the same class from any other source still surface.
ini_options.filterwarnings = [
  "ignore:target=None is deprecated since v0\\.8.*:FutureWarning:deprecate._types",
  "ignore:target=True is deprecated since v0\\.8.*:FutureWarning:deprecate._types",
  "ignore:'target=False' is not a valid deprecation mode.*:UserWarning:deprecate._types",
  "ignore:.*requires `args_mapping` to specify which arguments are being renamed.*:UserWarning:deprecate._types",
  "ignore:.*ignores `args_mapping`\\..*:UserWarning:deprecate._types",
  "ignore:.*ignores `args_extra`\\..*:UserWarning:deprecate._types",
]
ini_options.xfail_strict = true
ini_options.junit_duration_report = "call"

[tool.coverage]
run.parallel = true
run.relative_files = true
report.exclude_lines = [
  "pass",
  "pragma: no cover",
]
