[metadata]
license_file = LICENSE
description-file = README.md


[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --durations=25
    --color=yes


[coverage:report]
exclude_lines =
    pragma: no-cover
    pass


[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint


[isort]
known_first_party =
    deprecated
    tests
line_length = 120
order_by_type = False
# 3 - Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True


[mypy]
files = deprecate
disallow_untyped_defs = True
ignore_missing_imports = True
